Ponder need for workaround for systems with clocks that go backwards
    such as cygwin http://www.nntp.perl.org/group/perl.cpan.testers/2007/09/msg630399.html
    current assumption is that it doesn't matter if profiling for 'long enough'.
Add test for throwing an exception in context2edit as way to veto sample - and document
Add tests for set_precondition

=head2 DashProfiler 1.09 - r43 - Feb 20 2008

  Added $sample->current_sample_duration method.
  Added $core->period_start_time method.
  Added DashProfiler->profile_names method.
  Added DashProfiler->set_precondition method.
  Added DashProfiler::Core->estimate_sample_overheads.
  Added automatic measurement of sample overhead time.
  Updated DashProfiler::Apache to use set_precondition
    to start sample periods only for initial requests.
  Updated DashProfiler::Apache docs to suggest PerlInitHandler
    instead of PerlPostReadRequestHandler.

=head2 DashProfiler 1.08 - r36 - Sept 11 2007

  Fixed fatal error in visit_profile_nodes() for DBI profiles with no Data.

  Changed propagate_period_count() to not reset period_count.
  Changed to increment period_count in end_sample_period() not start_sample_period().
  Changed start_sample_period() to not call end_sample_period() automatically.
    So now multiple start_sample_period() calls without end_sample_period() calls
    are harmless - the period runs from the most recent start_sample_period() call.

  Added period_strict_start and period_strict_end attributes to control how
    missing/multiple start_sample_period() & end_sample_period calls are handled.
    The attributes can be code refs which are called when needed.
  Added extra_info attribute for use by scripts to carry any extra information.

=head2 DashProfiler 1.07 - r32 - Aug 16 2007

  Added DashProfiler::Apache
  Added -optional syntax to DashProfiler::Import

=head2 DashProfiler 1.06 - r29 - Aug 14 2007

  Fixed DashProfiler::Import :optionally to still export stubs