@@ -146,7 +146,7 @@ DashProfiler by Tim Bunce, L<http://www.tim.bunce.name> and
 L<http://blog.timbunce.org>
 
 =head1 COPYRIGHT
-        
+
 The DashProfiler distribution is Copyright (c) 2007-2008 Tim Bunce. Ireland.
 All rights reserved.
 
